--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Flex gyakorlás</h1>
-    <div class="container">
-        <div class="item green"></div>
-        <div class="item yellow"></div>
-        <div class="item purple"></div>
-      </div>      
+    <ul class="container">
+        <li class="item"></li>
+        <li class="item"></li>
+        <li class="item"></li>
+    </ul>      
 </body>
 </html>
